Fixed text alignment.

--- a/brothaus-react/src/css/Heading.css
+++ b/brothaus-react/src/css/Heading.css
@@ -36,7 +36,7 @@ body {
 
 #nav-items {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   max-width: 800px;
   margin: auto;
 }
